--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,19 @@
 body {
   max-width: 320px;
   margin: auto;
-  background: #ddd;
+  background: black;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+p {
+  color: white;
+}
+
+h1, h2 {
+  color: #e8cf2c;
+  text-align: center;
 }
