--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 }
 
 img {
-  display: block;
   max-width: 100%;
 }
 
@@ -16,4 +15,9 @@ p {
 h1, h2 {
   color: #e8cf2c;
   text-align: center;
+}
+
+a, hr {
+  text-decoration: none;
+  color: #e8cf2c;
 }
