--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,13 @@ main img {
   justify-content: center;
 }
 
+main h2{
+  padding: 55px 0 20px 0;
+}
 
+footer {
+  padding: 100px 0 30px 0;
+}
 
 p {
   color: white;
