--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body {
   background: black;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 img {
   max-width: 100%;
 }
@@ -41,6 +45,7 @@ main h2{
 
 footer {
   padding: 100px 0 30px 0;
+  font-size: 13px;
 }
 
 p {
