--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,8 @@ p {
   padding: 0 0 80px 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #e8cf2c;
   text-align: center;
   font-family: 'Tilt Warp', cursive;
